Fix InaccessibleObjectException in OperationFuture.get() on Java 17
OperationFuture.get() annotated failures by mutating Throwable.detailMessage
via reflection. On Java 9+ without --add-opens=java.base/java.lang=ALL-UNNAMED
this throws InaccessibleObjectException (a RuntimeException that escaped the
IllegalAccessException/NoSuchFieldException catch), crashing e.g.
/user_tasks?fetch_completed_task=true for tasks that completed with an error.

Rethrow new ExecutionException/CancellationException/InterruptedException
instances carrying the operation context instead, preserving the original
cause and stack trace. No reflection, no --add-opens required.